--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,2 @@
-<router-outlet *ngIf="theme.data"></router-outlet>
-<app-loader *ngIf="!theme.data"></app-loader>
+<router-outlet></router-outlet>
 
